# Lis

./: CMakeLists.txt  GlWindow.cpp  GlWindow.h  Lis.cpp  Lis.sln  Logger.cpp  Logger.h  PlanetWindow.cpp  PlanetWindow.h  fragment.shader  resources.qrc  sphere-fragment.shader  sphere-vertex.shader  textures.qrc  vertex.shader
CodeDB/Lis.vgdbcmake-Debug/: GlobalFileTable.000  codedb.lck
Lis/: CMakeLists.txt  CMakeLists.txt.old  Lis.vgdbcmake  README.md
